tests/errors/group-comb-conflict.expect
---CODE---
1
---STDERR---
Error: Malformed Structure: Obviously conflicting assignments found:
14 |      w1.in = r.out;
11 |      w1.in = 32'd10;

tests/errors/group-comb-conflict.futil
22 |      do_r;
   |      ^^^^^ Assigments activated by group enable
